修改player讀取新mrt detector 修改測試腳本

--- a/app/player.html
+++ b/app/player.html
@@ -15,7 +15,7 @@
                     <div class="progress-bar progress-bar-striped active" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width:80%">
                     </div>
                   </div> -->
-            <video muted autoplay id='videoContainer' class='video'></video>
+            <video muted id='videoContainer' class='video'></video>
             <button id='close' class='close'>X</button>
             <section id='error' class='error hide hidden'>
                 <h1 id='errorMessage'></h1>
